--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title/
 source: source
 destination: public
 plugins: plugins
@@ -35,7 +35,13 @@ recent_posts: 8       # Posts in the sidebar Recent Posts section
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [custom/asides/about.html, asides/recent_posts.html, asides/pinboard.html, asides/twitter.html, asides/delicious.html]
+default_asides: [
+	custom/asides/about.html 
+	#asides/recent_posts.html, 
+	#asides/pinboard.html, 
+	#asides/twitter.html, 
+	#asides/delicious.html
+	]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
