--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: My Octopress Blog
+title: Dan Woodward
 subtitle: A blogging framework for hackers.
 author: Dan Woodward
 simple_search: http://google.com/search
@@ -36,10 +36,9 @@ recent_posts: 8       # Posts in the sidebar Recent Posts section
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
 default_asides: [
-	custom/asides/about.html 
+	custom/asides/about.html, asides/twitter.html, 
 	#asides/recent_posts.html, 
-	#asides/pinboard.html, 
-	#asides/twitter.html, 
+	asides/pinboard.html 
 	#asides/delicious.html
 	]
 
@@ -59,7 +58,7 @@ pinboard_user: danwoodward
 pinboard_count: 10
 
 # Twitter
-twitter_user: danwoodward
+twitter_user:
 twitter_tweet_count: 1
 twitter_show_replies: true
 twitter_follow_button: true
